# omie_v2_python

./: .gitignore  README.md  pyproject.toml  requirements.txt
documents/: DOCUMENT-Predicion-MercadoElectrico-Indice.md  TFG-Predicion-MercadoElectrico-Indice.md  capitulo_01_resumen.md  capitulo_02_introduccion.md  capitulo_03_objetivos.md  capitulo_04_marco_teorico.md  capitulo_05_estado_del_arte.md  capitulo_06_fuentes_de_datos.md  capitulo_07_preparacion_de_datos.md  capitulo_08_ingenieria_de_variables.md  capitulo_09_modelos_de_prediccion.md  capitulo_10_metodologia_de_evaluacion.md  capitulo_11_diseno_aplicacion_practica.md  capitulo_12_implementacion_proyecto.md  capitulo_13_aplicacion_practica_desarrollada.md  capitulo_14_informacion_concreta_proyecto.md  capitulo_15_resultados_experimentales.md  capitulo_16_discusion.md  capitulo_17_conclusiones.md  capitulo_18_lineas_futuras.md  capitulo_19_planificacion_proyecto.md  capitulo_20_bibliografia_referencias.md  capitulo_21_anexos.md  indice_tfg_prediccion_mercado_electrico.md  resumen_hilo_desarrollo.md
src/omie_price_nn/: __init__.py  data.py  esios.py  features.py  gui.py  predict.py  train.py
