[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omie-price-nn"
version = "0.1.0"
description = "Red neuronal sencilla para inferir precio horario OMIE Espana."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "requests>=2.31",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "matplotlib>=3.8",
]

[project.scripts]
omie-price-gui = "omie_price_nn.gui:main"
omie-price-train = "omie_price_nn.train:main"
omie-price-predict = "omie_price_nn.predict:main"

[tool.setuptools.packages.find]
where = ["src"]
